create first view

--- a/FrontAppEmpresa/src/app/components/product/product.component.html
+++ b/FrontAppEmpresa/src/app/components/product/product.component.html
@@ -1,1 +1,11 @@
-<p>product works!</p>
+<div class="jumbotron py-3">
+    <h1 class="display-4 text-center">Products</h1>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <app-form-product></app-form-product>
+    </div>
+    <div class="col-md-6">
+        <span>List</span>
+    </div>
+</div>
